tweak styling to correct overlap of elements

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@ body {
   font-family: 'DIN Condensed','DIN Alternate','Silom','Segoe UI Black','Tahoma',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin-bottom:1rem;
 }
 
 
@@ -105,6 +104,7 @@ code {
   .sampleText {
     display: block;
     margin-left: 23rem;
+    margin-right: 4rem;
   }
 .samplePics{
   max-width: 21rem;
